# exo-app

./: README.md  package.json
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/exo/: README.md
src-tauri/exo/src/exo/: main.py
src-tauri/src/: lib.rs  main.rs
